internal/testdata/sdk/error/fixtures/user_not_found_error.go
// This file was auto-generated by Fern from our API Definition.

package api

import (
	json "encoding/json"
	core "github.com/fern-api/fern-go/internal/testdata/sdk/error/fixtures/core"
)

type UserNotFoundError struct {
	*core.APIError
	Body *UserNotFoundErrorBody
}

func (u *UserNotFoundError) UnmarshalJSON(data []byte) error {
	body := new(UserNotFoundErrorBody)
	if err := json.Unmarshal(data, &body); err != nil {
		return err
	}
	u.StatusCode = 404
	u.Body = body
	return nil
}

func (u *UserNotFoundError) MarshalJSON() ([]byte, error) {
	return json.Marshal(u.Body)
}
